fixed XW-356 (added more unit tests)